<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_etudes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="uqac.gestionvieetu.MainActivity">

    <Button
        android:id="@+id/AjouterHoraire"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:onClick="ajoutHoraire"
        android:text="@string/bHoraire"
        android:textSize="@dimen/textSizeSmallButton"/>

    <Button
        android:id="@+id/AjouterAFaire"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:text="@string/bAFaire"
        android:textSize="@dimen/textSizeSmallButton"/>

    <Button
        android:id="@+id/AjouterExamProjet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:text="@string/bExamProjet"
        android:textSize="@dimen/textSizeSmallButton"/>

</LinearLayout>