<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uqac.gestionvieetu.MainActivity">

    <Button
        android:id="@+id/tvBudget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bBudget"
        android:textSize="@dimen/textSizeMain"
        />

    <Button
        android:id="@+id/tvEtudes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="afficherLayoutEtudes"
        android:text="@string/bEtudes"
        android:textSize="@dimen/textSizeMain"
        />

    <Button
        android:id="@+id/tvSorties"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bSorties"
        android:textSize="@dimen/textSizeMain"
        />

</LinearLayout>
